:arrow_up: Upgrade Kotlin to 1.7.20